- Switched to Android L - Added new Annotations for AutomaticPersister (DbThisToOne, DbThisToMany, DbForeignKeyField) - Added Helper-class for AutomaticPersister to save data about SQL-db-fields (SqlDataField) - Added Helper-class for AutomaticPersister to store relations to other persisters (needed for loading/saving aggregated objects) - Added some documentation